--- a/school_management/student/templates/signup.html
+++ b/school_management/student/templates/signup.html
@@ -10,11 +10,13 @@
     <div class="container">
         
             <h1 class="signup">Create an account.</h1>
-            <p class="login">Already a member? <a href="#">Sign in</a></p>
-            <form>
-                <input type="email" placeholder="Email" name="username">
+            <p class="login">Already a member? <a href="signin">Sign in</a></p>
+            <form action="" method="POST">
+                {% csrf_token %}
+                <input type="text " placeholder="Username" name="username">
+                <input type="email" placeholder="Email" name="email">
                 <input type="password" placeholder="Password" name="password">
-                <input type="password" placeholder="Retype YourPassword" name="password">
+                <input type="password" placeholder="Confirm Password" name="password2">
                 <input type="submit" value="sign up">
                 <p class="forgot">Forgot Password? <a href="#">Click here</a></p>
             </form>
