--- a/school_management/templates/signin.html
+++ b/school_management/templates/signin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign In</title>
-   <link href="{% static 'signin.css' %}" rel="stylesheet">
+   <link href="{% static 'css/signin.css' %}" rel="stylesheet">
     <!-- <link rel="stylesheet" href="static/signIn.css"> -->
 
 </head>
