--- a/school_management/templates/signup.html
+++ b/school_management/templates/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="{% static 'signup.css'%}">
+    <link rel="stylesheet" href="{% static 'css/signup.css'%}">
 </head>
 <body>
     <div class="container">
