--- a/school_management/static/css/signIn.css
+++ b/school_management/static/css/signIn.css
@@ -3,7 +3,8 @@
 }
 
 body{
-   background-color: #49a160;
+    background-image: linear-gradient(to right,#308269,
+    #008d87, #00ae73);
 }
 
 a{
@@ -23,6 +24,13 @@ a:hover{
     border: 1px solid #fff;
     border-radius: 24px;
 }
+
+.error{
+    color: #9c2323;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 15px;
+  }
 
 .login{
     color: #fff;
@@ -60,7 +68,7 @@ input[type=submit]{
 }
 
 .forgot ,.reg{
-    color: #575454;
+    color: #d8d0d0;
 }
 
 .reg{
