--- a/school_management/static/css/signup.css
+++ b/school_management/static/css/signup.css
@@ -3,7 +3,8 @@
 }
 
 body{
-   background: #49a160;
+   background-image: linear-gradient(to right,#308269,
+    #008d87, #00ae73);
 }
   
 
@@ -29,8 +30,15 @@ a{
 
 .login, .forgot{
   text-align: center;
-  color: #534f4f;
+  color: #d8d0d0;
   margin-bottom: 1.5em;
+}
+
+.error{
+  color: #9c2323;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 15px;
 }
 
 input{
