--- a/school_management/templates/index.html
+++ b/school_management/templates/index.html
@@ -3,8 +3,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
         <link rel="stylesheet" href="{% static 'css/index.css' %}">
+        <link rel="stylesheet" href="{% static 'responsive/res_index.css' %}">
     </head>
 
     <body>
@@ -12,20 +15,61 @@
       
         <header>
             <div class="container row">
+                <!-- <div class="navbar-toggle" id="js-navbar-toggle">
+                    <i class="fa fa-bars"></i>
+                  </div> -->
+
                 <a href="" class="logo">
                     <img src="{% static 'images/logo.png' %}" alt="">
                 </a>
-                <nav>
+
+                <!-- <div class="con" onclick="myFunction(this)">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
+                </div> -->
+
+                
+                <nav class="nav">
+                   
+                    <div class="con" onclick="myFunction(this)">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </div>
                     <ul class="menu">
                         <li class="menu__list"><a href="" class="menu__link">Home</a></li>
                         <li class="menu__list"><a href=""class="menu__link">About</a></li>
                         <li class="menu__list"><a href="" class="menu__link">Contact</a></li>
+                        <li class="menu__list"><a href="signin" class="login-btn">Login</a></li>
                     </ul>
+
                   
+                  
+                    
                 </nav>
     
-                <a href="signin" class="login-btn">Login</a>
+                
             </div>
         </header>
+
+        <section class="hero">
+            <div class="hero__text">
+                <h1 class="main__head">
+                    WELCOME TO KSUSTA
+                </h1>
+                <p class="sub__head">
+                    The Kebbi State University of Science and 
+                    Technology (KSUSTA) is a state-owned university in Aliero,<br> Kebbi State, Nigeria. KSUSTA offers 
+                    programmes in agriculture and sciences, among others
+                </p>
+                <a href="" class="hero-btn">Vist Us to know more</a>
+            </div>
+            
+        </section>
+
+        <script src="{% static 'js/menu.js' %}"></script>
+            
+      
     </body>
 </html>
