--- a/school_management/static/responsive/res_index.css
+++ b/school_management/static/responsive/res_index.css
@@ -1,65 +1,29 @@
-@media(max-width :767px){
+@media(max-width: 700px) {
+  .menu__list{
+    display: block;
+  }
 
-  .nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .con{
-    border: 1px solid gold;
-    /* margin-top: 0; */
-    /* display: inline-block; */
-    /* position: relative;
-    top: -20px;
-    right: 60px; */
-    /* padding-bottom: 1.5em;
-    padding-right: 4.3em; */
-  
-
-    cursor: pointer;
-    /* margin-bottom: 5em; */
-    z-index: 3;
-  }
-  .bar1, .bar2, .bar3{
-    width: 35px;
-    height: 5px;
-    background-color: blue;
-    margin: 6px 0;
-    transition: .4s;
-  }
-  
-  .change .bar1{
-    transform: translate(0, 11px) rotate(-45deg);
-  }
-  
-  .change .bar2{
-    opacity: 0;
-  }
-  
-  .change .bar3{
-    transform: translate(0,-11px) rotate(45deg);
-  } 
-
-  .menu{
-    margin-top: 0;
-    flex-direction: column;
+  .nav_links{
     position: absolute;
-    background-color: #f44336;
+    background-color: #588878;
     height: 100vh;
-    /* width: 300px; */
-    width: 50%;
-    padding-top: 4em;
+    width: 200px;
     top: 0;
-    right: -50%;
+    right: -200px;
     text-align: left;
     z-index: 2;
-
+    transition: 1s;
   }
 
-  .menu__list{
-    padding-bottom: 30px;
+  .nav .fa{
+    display: block;
+    color: #070a0e;
+    margin: 10px;
+    font-size: 2rem;
+    cursor: pointer;
   }
 
- 
+  .menu{
+    padding: 30px;
+  }
 }
-
