--- a/school_management/courses/templates/courses/course_list.html
+++ b/school_management/courses/templates/courses/course_list.html
@@ -1,4 +1,10 @@
 <!-- course_list.html -->
+
+{% extends "courses/base.html" %}
+
+{% block content %}
+<h1>Available Courses</h1>
+<!-- Add your course listing content here -->
 {% for course in courses %}
   <h2>{{ course.title }}</h2>
   <p>{{ course.description }}</p>
@@ -6,4 +12,7 @@
   <hr>
 {% empty %}
   <p>No courses available.</p>
+  python
 {% endfor %}
+
+{% endblock %}
