--- a/school_management/courses/templates/home.html
+++ b/school_management/courses/templates/home.html
@@ -1,108 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My School</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <!-- Custom styles -->
-  <link rel="stylesheet" href="path/to/custom.css">
-</head>
-<body>
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">My School</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Courses</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Admissions</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+{% extends "courses/base.html" %}
 
-  <!-- Banner Section -->
-  <header class="banner">
-    <div class="container">
-      <h1>Welcome to My School</h1>
-      <p>Empowering Minds, Shaping Futures</p>
-      <a href="#" class="btn btn-primary">Learn More</a>
-    </div>
-  </header>
+{% block content %}
+<div class="jumbotron">
+    <h1 class="display-4">Welcome to our KSUSTA website</h1>
+    <p class="lead">We provide a platform for newbies to explore and discover the courses they are going to undergo.</p>
+    <hr class="my-4">
+    <p>Our aim is to connect students with experienced instructors who will guide them throughout each course.</p>
+    <a class="btn btn-primary btn-lg" href="/student/register/" role="button">Get Started</a>
+</div>
 
-  <!-- About Section -->
-  <section class="about">
-    <div class="container">
-      <div class="row">
+<div class="container my-4">
+    <div class="row">
         <div class="col-md-6">
-          <h2>About Us</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum aliquam, odio id tempus eleifend, elit odio rutrum metus, sit amet ullamcorper elit velit a dui.</p>
+            <h2>Our Courses</h2>
+            <p>Explore our wide range of courses covering various subjects and disciplines.</p>
+            <a class="btn btn-secondary" href="/courses/" role="button">Browse Courses</a>
         </div>
         <div class="col-md-6">
-          <img src="path/to/about-image.jpg" alt="About Image" class="img-fluid">
+            <h2>Our Instructors</h2>
+            <p>Meet our dedicated team of experienced instructors ready to guide you throughout your learning journey.</p>
+            <a class="btn btn-secondary" href="/instructors/" role="button">Meet the Instructors</a>
         </div>
-      </div>
     </div>
-  </section>
-
-  <!-- Courses Section -->
-  <section class="courses">
-    <div class="container">
-      <h2>Our Courses</h2>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="course-card">
-            <img src="path/to/course-image.jpg" alt="Course Image" class="img-fluid">
-            <h4>Course Title 1</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="course-card">
-            <img src="path/to/course-image.jpg" alt="Course Image" class="img-fluid">
-            <h4>Course Title 2</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="course-card">
-            <img src="path/to/course-image.jpg" alt="Course Image" class="img-fluid">
-            <h4>Course Title 3</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2023 My School. All rights reserved.</p>
-    </div>
-  </footer>
-
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+</div>
+{% endblock %}
