--- a/school_management/courses/templates/courses/instructor_list.html
+++ b/school_management/courses/templates/courses/instructor_list.html
@@ -9,8 +9,8 @@
         <div class="col-md-4">
             <div class="card mb-4">
                 <div class="card-body">
-                    <h5 class="card-title">{{ instructor.name }}</h5>
-                    <p class="card-text">{{ instructor.bio }}</p>
+                    <h5 class="card-title"><strong>Name:</strong>{{ instructor.user.username }}</h5>
+                    <p class="card-text"><strong>Bio:</strong>{{ instructor.bio }}</p>
                     <p class="card-text"><strong>Email:</strong> {{ instructor.email }}</p>
                 </div>
             </div>
