--- a/school_management/courses/templates/courses/base.html
+++ b/school_management/courses/templates/courses/base.html
@@ -5,13 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Course Website{% endblock %}</title>
+    <title>{% block title %}School Management  Website{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
 </head>
 <body class ="d-flex flex-column min-vh-100">
     <div class="wrapper flex-grow-1">
          <!-- Navigation -->
+    {% block navigation %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="/">
@@ -40,6 +41,7 @@
             </div>
         </div>
     </nav>
+    {% endblock %}
 
     <!-- Content -->
     <div class="container mt-4">
