--- a/school_management/courses/templates/courses/student_login.html
+++ b/school_management/courses/templates/courses/student_login.html
@@ -12,7 +12,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form|crispy}}
-        <p>Don't have an account?  <a href="login">Register</a></p>
+        <p>Don't have an account?  <a href="/student/register">Register</a></p>
         <button type="submit" class="btn btn-success">Login</button>
         
         
